<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigationHome"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/navigationHome"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigationSearch"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/navigationSearch"
        app:showAsAction="ifRoom"/>

<!--    <item-->
<!--        android:id="@+id/navigationSearch"-->
<!--        android:enabled="true"-->
<!--        android:icon="@android:drawable/ic_menu_search"-->
<!--        android:title="Search"-->
<!--        app:showAsAction="ifRoom"/>-->

    <item
        android:id="@+id/navigationMyProfile"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/navigationUser"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigationLogout"
        android:enabled="true"
        android:icon="@drawable/ic_exit"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>