<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:focusableInTouchMode="true">
    <LinearLayout
        style="@style/df_row_vertical"
        android:layout_height="match_parent"
        android:weightSum="12"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/BlackColor"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mainlogo"
                android:transitionName="top_image_transition"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:src="@drawable/newlogo"
                android:contentDescription="@string/todo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="10"
            android:gravity="center"
            android:background="@color/formBg"
            android:padding="20dp">
            <LinearLayout
                android:id="@+id/registerlayout"
                style="@style/df_row_vertical"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="visible">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="25sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/editTextFname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:singleLine="true"
                    android:inputType=""
                    android:autofillHints="" />
                <EditText
                    android:id="@+id/editTextLname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:singleLine="true"
                    android:inputType=""
                    android:autofillHints="" />


                <EditText
                    android:id="@+id/editTextUnameReg"
                    android:transitionName="username_transition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:singleLine="true"
                    android:inputType=""
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editTextPasswordReg"
                    android:transitionName="password_transition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editTextPasswordRep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:singleLine="true"
                    android:autofillHints="" />

                <CheckBox
                    android:id="@+id/AgreetotheTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/i_agree_to_the_terms_and_conditions" />

                <Button
                    android:id="@+id/buttonregister"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    style="@style/df4_btn_danger"
                    android:layout_gravity="center_vertical"
                    android:text="@string/register"/>

                <TextView
                    android:id="@+id/TextViewLogin"
                    style="@style/df_h6"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:text="Already a user? Sign in"
                    android:textColor="@color/WineRed"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/progressSendingOtp"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>