<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:focusableInTouchMode="true"
    tools:context="com.example.login_register_me1.LoginActivity">
<LinearLayout
    style="@style/df_row_vertical"
    android:layout_height="match_parent"
    android:weightSum="12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/BlackColor"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mainlogo"
            android:transitionName="top_image_transition"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:src="@drawable/newlogo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:gravity="center"
        android:background="@color/formBg"
        android:padding="20dp">
        <LinearLayout
            android:id="@+id/loginlayout"
            style="@style/df_row_vertical"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="25dp"
                android:gravity="center"/>


            <EditText
                android:id="@+id/editTextUname"
                android:transitionName="username_transition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_email"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editTextPassword"
                android:transitionName="password_transition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/AgreetotheTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/stay_logged_in" />

            <Button
                android:id="@+id/buttonLogin"
                style="@style/df4_btn_danger"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="40dp"
                android:text="LOGIN" />

            <ProgressBar
                android:id="@+id/progressSendingOtp"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                android:layout_centerInParent="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="24dp"
                style="@style/df_h6"
                android:text="Forgot your password? Reset it here" />

            <TextView
                android:id="@+id/TextViewRegister"
                style="@style/df_h6"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:text="@string/no_account_create_one"
                android:textColor="@color/WineRed"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</LinearLayout>